--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -89,11 +89,13 @@
             <a class="links" href='/accounts/logout/'>Logout</a><hr>
         </div>
     </div>
+    <div class="csrf_token" id="csrf" name={%csrf_token%}></div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
         <script type="text/javascript" src="{% static 'js/game.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
 
+    
 
 </body>
 </html>
